# strata-core

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  EPICS-strata-inference.md  LLAMA_CPP_VERSION  PLAN-strata-inference.md  deny.toml
benchmarks/: Cargo.toml
benchmarks/baselines/: b6-baseline.json  pre-branch-cleanup.json  t1-complete.json
benchmarks/benches/: redb_benchmark.rs  redb_common.rs  wal_latency.rs  ycsb_compare.rs  ycsb_workloads.rs
benchmarks/history/: history.json
benchmarks/results/: wal-latency-2026-04-15T16-41-06Z-e33da45d.json  wal-latency-2026-04-17T19-10-05Z-528760b5.json  wal-latency-2026-04-17T19-11-26Z-9fd47985.json
benchmarks/src/: lib.rs  schema.rs
benchmarks/src/harness/: metrics.rs  mod.rs  recorder.rs  scaling.rs
crates/cli/: Cargo.toml
crates/cli/src/: admin.rs  app.rs  commands.rs  context.rs  format.rs  init.rs  main.rs  open.rs  parse.rs  render.rs  repl.rs  request.rs  state.rs  value.rs
crates/concurrency/: Cargo.toml
crates/concurrency/src/: conflict.rs  lib.rs  manager.rs  payload.rs  recovery.rs  snapshot.rs  transaction.rs  validation.rs
crates/core/: Cargo.toml
crates/core-legacy/: Cargo.toml
crates/core-legacy/src/: branch.rs  error.rs  id.rs  instrumentation.rs  lib.rs  traits.rs  types.rs  value.rs
crates/core-legacy/src/contract/: branch_name.rs  entity_ref.rs  mod.rs  primitive_type.rs  timestamp.rs  version.rs  versioned.rs  versioned_history.rs
crates/core-legacy/src/primitives/: event.rs  json.rs  mod.rs  vector.rs
crates/core/src/: branch.rs  branch_dag.rs  branch_types.rs  error.rs  id.rs  lib.rs  limits.rs  traits.rs  types.rs  value.rs
crates/core/src/contract/: branch_name.rs  entity_ref.rs  primitive_type.rs  version.rs  versioned.rs
crates/core/src/primitives/: event.rs  json.rs  state.rs  vector.rs
crates/durability/: Cargo.toml  README.md
crates/durability/src/: coordination.rs  layout.rs  lib.rs  snapshot.rs
crates/durability/src/branch_bundle/: reader.rs  types.rs  wal_log.rs  writer.rs
crates/durability/src/codec/: aes_gcm.rs  identity.rs  mod.rs  traits.rs
crates/durability/src/compaction/: mod.rs  tombstone.rs  wal_only.rs
crates/durability/src/database/: handle.rs
crates/durability/src/disk_snapshot/: checkpoint.rs  mod.rs  reader.rs  writer.rs
crates/durability/src/format/: manifest.rs  mod.rs  primitive_tags.rs  primitives.rs  segment_meta.rs  snapshot.rs  wal_record.rs  watermark.rs  writeset.rs
crates/durability/src/recovery/: coordinator.rs  replayer.rs
crates/durability/src/wal/: config.rs  mod.rs  mode.rs  reader.rs  writer.rs
crates/engine/: Cargo.toml
crates/engine/benches/: primitive_benchmarks.rs  transaction_benchmarks.rs  vector_benchmarks.rs
crates/engine/src/: background.rs  branch_dag.rs  branch_domain.rs  branch_ops.rs  branch_status_cache.rs  bundle.rs  coordinator.rs  error.rs  instrumentation.rs  lib.rs  limits.rs  recipe_store.rs  sensitive.rs  system_space.rs  transaction_ops.rs
crates/engine/src/branch_domain/: branch.rs  branch_dag.rs  branch_types.rs
crates/engine/src/branch_ops/: branch_control_store.rs  dag_hooks.rs  json_merge.rs  mod.rs  primitive_merge.rs
crates/engine/src/branch_retention/: mod.rs
crates/engine/tests/: adversarial_tests.rs  architecture_doc_truth.rs  branch_id_characterization.rs  branch_isolation_tests.rs  branch_lifecycle_tests.rs  concurrency_tests.rs  config_matrix.rs  crash_simulation_test.rs  critical_audit_tests.rs  cross_primitive_tests.rs  database_open_test.rs  database_transaction_tests.rs  flush_pipeline_tests.rs  follower_tests.rs  m4_pooling_tests.rs  memory_profiling.rs  multi_process_tests.rs  primitives_cross_tests.rs  recovery_parity.rs  recovery_storage_policy.rs  recovery_tests.rs  replay_invariants.rs  robustness_regressions.rs  surface_regression.rs  vector_transaction_tests.rs  versioned_conformance_tests.rs
crates/executor/: Cargo.toml
crates/executor-legacy/: Cargo.toml
crates/executor-legacy/src/: bootstrap.rs  bridge.rs  command.rs  error.rs  json.rs  lib.rs  output.rs  session.rs  suggest.rs  types.rs
crates/executor-legacy/tests/: common.rs  cross_primitive_time_travel.rs  strata_api.rs
crates/executor/src/: bridge.rs  command.rs  compat.rs  convert.rs  error.rs  executor.rs  json.rs  lib.rs  output.rs  session.rs  suggest.rs  types.rs
crates/graph/: Cargo.toml
crates/graph/src/: analytics.rs  boost.rs  branch_dag.rs  branch_status_cache.rs  bulk.rs  dag_hook_impl.rs  edges.rs  ext.rs  integrity.rs  keys.rs  lib.rs  lifecycle.rs  merge.rs  merge_handler.rs  nodes.rs  ontology.rs  packed.rs  snapshot.rs  store.rs  traversal.rs
crates/inference/: Cargo.toml  build.rs
crates/inference/examples/: validate_inference.rs
crates/inference/src/: cloud_embed.rs  embed.rs  error.rs  generate.rs  lib.rs  rank.rs
crates/intelligence/: Cargo.toml
crates/intelligence/src/: expand.rs  expand_cache.rs  generate.rs  lib.rs  rerank.rs  shadow.rs
crates/intelligence/tests/: embed_model_lifecycle_tests.rs  embed_pipeline_tests.rs  expand_cache_fork_test.rs  generate_lifecycle_tests.rs
crates/search/: Cargo.toml
crates/search/src/: fuser.rs  hybrid.rs  lib.rs  llm_client.rs  substrate.rs
crates/security/: Cargo.toml
crates/security/src/: lib.rs  sensitive.rs
crates/storage/: Cargo.toml
crates/storage/proptest-regressions/: key_encoding.txt
crates/storage/src/: block_cache.rs  bloom.rs  compaction.rs  contention.rs  error.rs  index.rs  key_encoding.rs  layout.rs  lib.rs  manifest.rs  memory_stats.rs  memtable.rs  merge_iter.rs  pressure.rs  quarantine.rs  rate_limiter.rs  runtime_config.rs  seekable.rs  segment.rs  segment_builder.rs  segmented.rs  sharded.rs  stored_value.rs  test_hooks.rs  traits.rs  ttl.rs
crates/vector/: Cargo.toml
crates/vector/benches/: vector_benchmarks.rs
crates/vector/src/: backend.rs  brute_force.rs  collection.rs  distance.rs  error.rs  ext.rs  filter.rs  heap.rs  hnsw.rs  lib.rs  merge_handler.rs  mmap.rs  mmap_graph.rs  quantize.rs  recovery.rs  segmented.rs  snapshot.rs  store.rs  types.rs  wal.rs
(+726 files in other folders)
