[package]
name = "stratadb"
version = "0.6.0"
edition = "2021"
description = "Production-grade embedded database for AI agents"

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/storage",
    "crates/concurrency",
    "crates/durability",
    "crates/engine",
    "crates/intelligence",
    "crates/cli",
    "crates/security",
    "crates/executor",
    "crates/search",
]

[workspace.package]
version = "0.6.0"
edition = "2021"
rust-version = "1.70"
authors = ["Strata contributors"]
license = "Apache-2.0"
repository = "https://github.com/anibjoshi/strata"

[workspace.dependencies]
# Core dependencies shared across crates
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
# Concurrency
parking_lot = "0.12"
dashmap = "5"
rustc-hash = "1.1"
smallvec = "1.11"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async runtime (for future network layer)
tokio = { version = "1.35", features = ["full"] }

# Serialization
rmp-serde = "1.1"
byteorder = "1.5"
toml = "0.8"

# Archive/Compression (RunBundle)
tar = "0.4"
zstd = "0.13"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# HTTP client (model download)
ureq = "3"

# Encoding
base64 = "0.21"

# Testing
rand = "0.8"
tempfile = "3.8"
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Lazy initialization
once_cell = "1.18"

# Memory-mapped files
memmap2 = "0.9"

# Parallel iteration
rayon = "1.10"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false

[profile.bench]
inherits = "release"

[features]
default = []
perf-trace = []  # Enable per-layer timing instrumentation for M4
# Basic comparison benchmarks (redb, LMDB, SQLite)
comparison-benchmarks = ["dep:redb", "dep:heed", "dep:rusqlite"]
# Enable USearch for vector comparisons (requires C++ build tools)
usearch-enabled = ["dep:usearch"]
# Enable auto-embedding (MiniLM-L6-v2 inference runtime)
embed = ["strata-executor/embed"]
# GPU-accelerated embedding via CUDA (Linux/Windows with NVIDIA GPU)
embed-cuda = ["strata-executor/embed-cuda"]
# GPU-accelerated embedding via Metal (macOS with Apple GPU)
embed-metal = ["strata-executor/embed-metal"]

[dependencies]
strata-executor = { path = "crates/executor" }
thiserror = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

# Optional SOTA comparison dependencies (enable with --features=comparison-benchmarks)
redb = { version = "2.0", optional = true }
heed = { version = "0.20", optional = true }
rusqlite = { version = "0.32", features = ["bundled", "serde_json"], optional = true }
usearch = { version = "2.0", optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
rustc-hash = { workspace = true }
parking_lot = { workspace = true }
# Internal crates for testing only
strata-core = { path = "crates/core" }
strata-storage = { path = "crates/storage" }
strata-concurrency = { path = "crates/concurrency" }
strata-durability = { path = "crates/durability" }
strata-engine = { path = "crates/engine" }
strata-intelligence = { path = "crates/intelligence" }
strata-search = { path = "crates/search" }
uuid = { workspace = true }
crc32fast = "1.3"
base64 = "0.21"
