[package]
name = "stratadb"
version = "0.6.1"
edition = "2021"
license = "Apache-2.0"
description = "Production-grade embedded database for AI agents"

[lints]
workspace = true

[workspace]
resolver = "2"
default-members = ["crates/executor", "crates/cli", "crates/engine"]
exclude = ["benchmarks"]
members = [
    "crates/core",
    "crates/storage",
    "crates/concurrency",
    "crates/durability",
    "crates/engine",
    "crates/graph",
    "crates/inference",
    "crates/intelligence",
    "crates/cli",
    "crates/security",
    "crates/executor",
    "crates/search",
    "crates/vector",
]

[workspace.package]
version = "0.6.1"
edition = "2021"
rust-version = "1.88"
authors = ["Strata contributors"]
license = "Apache-2.0"
repository = "https://github.com/anibjoshi/strata"

[workspace.lints.rust]
unused_must_use = "deny"
unsafe_op_in_unsafe_fn = "warn"
missing_docs = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Relaxations for existing code patterns
module_name_repetitions = "allow"
too_many_arguments = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Existing code uses these patterns - fix in later cleanup
map_err_ignore = "allow"
manual_div_ceil = "allow"
manual_is_multiple_of = "allow"
io_other_error = "allow"
option_map_or_none = "allow"
unnecessary_map_or = "allow"

[workspace.dependencies]
# Core dependencies shared across crates
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
bincode = "1.3"
thiserror = "1.0"
# Concurrency
parking_lot = "0.12"
dashmap = "5"
rustc-hash = "1.1"
smallvec = "1.11"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async runtime (for future network layer)
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde_bytes = "0.11"
rmp-serde = "1.1"
byteorder = "1.5"
toml = "0.8"

# Archive/Compression (RunBundle)
tar = "0.4"
zstd = "0.13"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# HTTP client (model download)
ureq = "3"

# Encoding
base64 = "0.22"

# Testing
rand = "0.9.3"
tempfile = "3.8"
serde_json = "1.0"
proptest = "1.7"
criterion = "0.5"
serial_test = "3"

# Cryptography
sha2 = "0.10"
aes-gcm = "0.10"

# System
fs2 = "0.4"
libc = "0.2"
crc32fast = "1.3"

# Data structures
arc-swap = "1"
crossbeam-skiplist = "0.1"
static_assertions = "1.1"

# String similarity
strsim = "0.11"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Lazy initialization
once_cell = "1.18"

# Memory-mapped files
memmap2 = "0.9"

# Parallel iteration
rayon = "1.10"

# Arrow interoperability (optional, for import/export)
arrow = { version = "54", default-features = false, features = ["prettyprint", "csv", "json"] }
parquet = { version = "54", default-features = false, features = ["arrow", "snap", "zstd", "lz4"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false

[profile.bench]
inherits = "release"

[features]
default = ["jemalloc"]
jemalloc = ["dep:tikv-jemallocator"]
perf-trace = ["strata-engine/perf-trace"]  # Enable per-operation timing instrumentation
# Basic comparison benchmarks (redb, LMDB, SQLite)
comparison-benchmarks = ["dep:redb", "dep:heed", "dep:rusqlite"]
# Enable USearch for vector comparisons (requires C++ build tools)
usearch-enabled = ["dep:usearch"]
# Enable auto-embedding (MiniLM-L6-v2 inference, GPU auto-detected)
embed = ["strata-executor/embed"]
# Cloud generation providers
anthropic = ["strata-executor/anthropic"]
openai = ["strata-executor/openai"]
google = ["strata-executor/google"]
# Arrow-based import/export (Parquet, CSV, JSONL)
arrow = ["strata-executor/arrow"]

[dependencies]
strata-executor = { path = "crates/executor" }
thiserror = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tikv-jemallocator = { version = "0.6", optional = true }

# Optional SOTA comparison dependencies (enable with --features=comparison-benchmarks)
redb = { version = "2.0", optional = true }
heed = { version = "0.20", optional = true }
rusqlite = { version = "0.32", features = ["bundled", "serde_json"], optional = true }
usearch = { version = "2.0", optional = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
rustc-hash = { workspace = true }
parking_lot = { workspace = true }
proptest = { workspace = true }
# Internal crates for testing only
strata-core = { path = "crates/core" }
strata-storage = { path = "crates/storage" }
strata-concurrency = { path = "crates/concurrency" }
strata-durability = { path = "crates/durability" }
strata-engine = { path = "crates/engine", features = ["test-support"] }
strata-graph = { path = "crates/graph" }
strata-vector = { path = "crates/vector" }
strata-intelligence = { path = "crates/intelligence" }
strata-search = { path = "crates/search" }
uuid = { workspace = true }
crc32fast = { workspace = true }
base64 = { workspace = true }
