[package]
name = "strata-cli"
version = "0.6.0"
edition = "2021"
description = "Redis-inspired CLI for the Strata database"
publish = false

[[bin]]
name = "strata"
path = "src/main.rs"

[features]
default = []
embed = ["strata-executor/embed", "dep:strata-intelligence"]

[dependencies]
strata-executor = { path = "../executor" }
strata-intelligence = { path = "../intelligence", features = ["embed"], optional = true }
clap = { version = "4", features = ["string"] }
rustyline = { version = "15", features = ["with-file-history"] }
shlex = "1"
serde_json = { workspace = true }
