[package]
name = "strata-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Thin CLI shell over strata-executor"
publish = false

[lints]
workspace = true

[[bin]]
name = "strata"
path = "src/main.rs"

[features]
default = []
embed = ["strata-executor/embed", "dep:strata-intelligence"]
anthropic = ["embed", "strata-executor/anthropic"]
openai = ["embed", "strata-executor/openai"]
google = ["embed", "strata-executor/google"]
cloud = ["anthropic", "openai", "google"]
arrow = ["strata-executor/arrow"]

[dependencies]
strata-executor = { path = "../executor" }
strata-intelligence = { path = "../intelligence", features = ["embed"], optional = true }
clap = { version = "4", features = ["string"] }
daemonize = "0.5"
libc = { workspace = true }
rustyline = { version = "15", features = ["with-file-history"] }
shlex = "1"
serde_json = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
