[package]
name = "strata-concurrency"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[features]
default = []
perf-trace = ["strata-core/perf-trace"]  # Enable per-operation timing in commit path
fault-injection = []

[dependencies]
strata-core = { package = "strata-core-legacy", path = "../core-legacy" }
strata-storage = { path = "../storage" }
strata-durability = { path = "../durability", features = ["engine-internal"] }
chrono = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
static_assertions = { workspace = true }
tempfile = { workspace = true }
