[package]
name = "strata-core-legacy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[lib]
name = "strata_core"

[features]
default = []
perf-trace = []  # Enable per-operation timing instrumentation

[dependencies]
strata-core-foundation = { package = "strata-core", path = "../core" }
strata-storage = { path = "../storage" }
uuid = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
