[package]
name = "strata-durability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = []

[dependencies]
strata-core = { path = "../core" }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
crc32fast = "1.3"
fs2 = "0.4"
aes-gcm = "0.10"
rand = { workspace = true }

# RunBundle support
tar = { workspace = true }
zstd = { workspace = true }
xxhash-rust = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
