[package]
name = "strata-durability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
strata-core = { package = "strata-core-legacy", path = "../core-legacy" }
strata-storage = { path = "../storage" }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
crc32fast = { workspace = true }

# RunBundle support
tar = { workspace = true }
zstd = { workspace = true }
xxhash-rust = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
