[package]
name = "strata-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[features]
default = []
perf-trace = ["strata-concurrency/perf-trace"]  # Enable per-operation timing instrumentation
embed = []       # Marker feature: auto-embed runtime is available
test-support = []  # Expose test helpers for downstream crates

[dependencies]
strata-core = { path = "../core" }
strata-storage = { path = "../storage" }
strata-concurrency = { path = "../concurrency" }
strata-durability = { path = "../durability" }
strata-security = { path = "../security" }
dashmap = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
fs2 = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
byteorder = { workspace = true }
rmp-serde = { workspace = true }
toml = { workspace = true }
memmap2 = { workspace = true }
rayon = { workspace = true }
smallvec = { workspace = true }
unicode-segmentation = "1.12"
chrono = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
serial_test = { workspace = true }

[[bench]]
name = "transaction_benchmarks"
harness = false

[[bench]]
name = "primitive_benchmarks"
harness = false
