[package]
name = "strata-executor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Public command boundary for Strata"

[lints]
workspace = true

[features]
default = []
embed = [
    "strata-executor-legacy/embed",
    "strata-intelligence/embed",
    "strata-engine/embed",
]
expand = ["strata-executor-legacy/expand", "strata-search/expand"]
rerank = ["strata-executor-legacy/rerank", "strata-search/rerank"]
anthropic = ["strata-executor-legacy/anthropic", "embed", "strata-intelligence/anthropic"]
openai = ["strata-executor-legacy/openai", "embed", "strata-intelligence/openai"]
google = ["strata-executor-legacy/google", "embed", "strata-intelligence/google"]
arrow = ["strata-executor-legacy/arrow", "dep:arrow", "dep:parquet"]

[dependencies]
strata-executor-legacy = { path = "../executor-legacy" }
strata-core = { path = "../core" }
strata-engine = { path = "../engine" }
strata-graph = { path = "../graph" }
strata-intelligence = { path = "../intelligence" }
strata-search = { path = "../search" }
strata-security = { path = "../security" }
strata-vector = { path = "../vector" }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strsim = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
arrow = { workspace = true, optional = true }
parquet = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
