[package]
name = "strata-executor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Public command boundary for Strata"

[lints]
workspace = true

[features]
default = []
embed = ["strata-intelligence/embed", "strata-engine/embed"]
expand = ["strata-search/expand"]
rerank = ["strata-search/rerank"]
anthropic = ["embed", "strata-intelligence/anthropic"]
openai = ["embed", "strata-intelligence/openai"]
google = ["embed", "strata-intelligence/google"]
arrow = ["dep:arrow", "dep:parquet"]

[dependencies]
strata-core = { package = "strata-core", path = "../core" }
strata-engine = { path = "../engine" }
strata-intelligence = { path = "../intelligence" }
strata-search = { path = "../search" }
strata-storage = { path = "../storage" }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strsim = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }
arrow = { workspace = true, optional = true }
parquet = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
