[package]
name = "strata-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Graph engine for StrataDB"

[lints]
workspace = true

[dependencies]
strata-core = { path = "../core" }
strata-concurrency = { path = "../concurrency" }
strata-engine = { path = "../engine" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
