[package]
name = "strata-graph"
version = "0.6.1"
edition = "2021"
description = "Graph engine for StrataDB"
license = "Apache-2.0"
publish = false

[dependencies]
strata-core = { path = "../core" }
strata-concurrency = { path = "../concurrency" }
strata-engine = { path = "../engine" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
