[package]
name = "strata-inference"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Inference engine for Strata — local (llama.cpp) and cloud providers"

[features]
default = ["local"]
local = ["dep:cmake"]   # Compile llama.cpp from vendored source (GPU auto-detected)
download = ["dep:ureq", "dep:sha2"]  # Enable model download from HuggingFace
anthropic = ["dep:ureq", "dep:serde", "dep:serde_json"]   # Enable Anthropic (Claude) cloud provider
openai = ["dep:ureq", "dep:serde", "dep:serde_json"]      # Enable OpenAI (GPT) cloud provider
google = ["dep:ureq", "dep:serde", "dep:serde_json"]       # Enable Google (Gemini) cloud provider

[build-dependencies]
cmake = { version = "0.1", optional = true }

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true, optional = true }
sha2 = { version = "0.10", optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
