[package]
name = "strata-intelligence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license = "BUSL-1.1"
repository.workspace = true
publish = false
description = "Embedding and inference infrastructure for Strata"

[features]
default = []
embed = ["dep:strata-inference"]
# Cloud generation providers — each enables the corresponding
# strata-inference feature. Requires 'embed' to be useful.
anthropic = ["embed", "strata-inference/anthropic"]
openai = ["embed", "strata-inference/openai"]
google = ["embed", "strata-inference/google"]

[dependencies]
strata-core = { path = "../core" }
strata-engine = { path = "../engine" }
strata-search = { path = "../search" }
tracing = { workspace = true }
strata-inference = { path = "../inference", optional = true, features = ["local", "download"] }

[dev-dependencies]
tempfile = { workspace = true }
