[package]
name = "strata-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license = "BUSL-1.1"
repository.workspace = true
publish = false
description = "Pluggable search orchestration for Strata"

[features]
default = []
expand = ["dep:ureq"]
rerank = ["dep:ureq"]

[dependencies]
strata-core = { path = "../core" }
strata-engine = { path = "../engine" }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
