[package]
name = "strata-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Pluggable search orchestration for Strata"

[features]
default = []
expand = ["dep:ureq"]
rerank = ["dep:ureq"]

[dependencies]
strata-core = { path = "../core" }
strata-engine = { path = "../engine" }
strata-graph = { path = "../graph" }
strata-vector = { path = "../vector" }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
