[package]
name = "strata-security"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Access control and configuration for Strata database"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
zeroize = "1"

[dev-dependencies]
serde_json = { workspace = true }
