[package]
name = "strata-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
strata-core = { path = "../core" }
dashmap = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
crossbeam-skiplist = "0.1.3"
crc32fast = "1.3"
bincode = { workspace = true }
zstd = "0.13"
parking_lot = { workspace = true }
arc-swap = "1"
tracing = { workspace = true }

[dev-dependencies]
proptest = "1.7.0"
rand = { workspace = true }
tempfile = { workspace = true }
